# AudioTheorem

./: ._target  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  audio_theorem.markup
examples/: graphics.rs  intervals.rs  midi.rs  musicae.rs  scales.rs  test.rs
midis/: Cargo.toml
midis/src/: main.rs
musictheory-rs/: .travis.yml  Cargo.toml  README.md
musictheory-rs/examples/: test.rs
musictheory-rs/src/: analysis.rs  graphics.rs  lib.rs  midi.rs  types.rs
musictheory-rs/src/graphics/: graphics.rs  shader.wgsl
musictheory-rs/src/midi/: event.rs  events.rs  file.rs  pitches.rs  song.rs  track.rs
musictheory-rs/src/types/: cents.rs  form.rs  interval.rs  matrix.rs  note.rs  octave.rs  pitch.rs  pitchclass.rs  pitchgroup.rs  pitchmode.rs  sequence.rs  steps.rs  tone.rs
musictheory-rs/src/types/scale/: chromatic.rs  ditonic.rs  heptatonic.rs  nonatonic.rs  tritonic.rs
proto/: colors.py  engine.py  frame.py  main.py  resolution.py  waveform.py
src/: analysis.rs  graphics.rs  lib.rs  main.rs  runtime.rs  types.rs
src/graphics/: camera.rs  coloredshader.wgsl  graphics.rs  gui.rs  instances.rs  mesh.rs  scene.rs  spheres.rs  texture.rs  texturedshader.wgsl
src/midi/: events.rs
src/runtime/: disposition.rs  graphics.rs  pitchgroup_analyzer.rs  pitchgroupkernel.rs  sequence.rs  theorem.rs  waveform.rs  wavetables.rs
src/runtime/graphics/: engine.rs  gui.rs  instances.rs  mesh.rs  texturedshader.wgsl
src/runtime/midi/: events.rs
src/runtime/theorem/: chord.rs  key.rs  mod.rs  pitchgroupkernel.rs  sequence.rs  subsequence.rs  tonic.rs
src/types/: circle.rs  degree.rs  dynamic.rs  form.rs  interval.rs  matrix.rs  mode.rs  note.rs  octave.rs  pitch.rs  pitchclass.rs  pitchgroup.rs  pitchmode.rs  scale.rs  sequence.rs  steps.rs  tone.rs
src/types/scale/: hexatonic.rs  monotonic.rs  octatonic.rs  pentatonic.rs  tetratonic.rs
