[package]
name = "audiotheorem"
version = "0.2.0"
edition = "2021"
authors = [ "Hans W. Uhlig <huhlig@gmail.com>", "Richard I. Christopher <rchris@neotec.dev>" ]
description = "An attempt at encoding musical theory into a usable library"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audiotheorem"
path = "src/main.rs"

[dependencies]
byteorder = "1.3.4"
tracing = "0.1.13"
midir = "0.9.1"
libloading = "0.7.4"
winit = "0.28.2"
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.15"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
image = "0.24.5"
cgmath = "0.18.0"
rustysynth = "1.3.1"
rodio = "0.18.0"
crossbeam-channel = "0.5.12"
tokio = { version = "1.37.0", features = ["full"] }

[[example]]
name = "test"
