[package]
name = "audiotheorem"
version = "0.2.0"
edition = "2021"
authors = [ "Hans W. Uhlig <huhlig@gmail.com>", "Richard I. Christopher <SoulFilledDirt@gmail.com>" ]
description = "An attempt at encoding musical theory into a usable library"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
byteorder = "1.3.4"
tracing = "0.1.13"
midir = "0.9.1"
bevy = "0.10"
libloading = "0.7.4"

[[example]]
name = "test"
