[package]
name = "audiotheorem"
version = "0.2.0"
edition = "2021"
authors = [ "Hans W. Uhlig <huhlig@gmail.com>", "Richard I. Christopher <rchris@neotec.dev>" ]
description = "An attempt at encoding musical theory into a usable library"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.3.4"
tracing = "0.1.13"
midir = "0.9.1"
libloading = "0.7.4"
winit = "0.28.2"
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[example]]
name = "test"
